add underscore & bootstrap

--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
 
-	<!-- <link rel="shortcut icon" href="/public/amazon.ico"> -->
-</head>
 
-<body>
-	<header>123</header>
-	<div class="main"></div>
-	<footer>@copyright</footer>
-</body>
-</html>
+<% include header.html %>
+
+<h1><%= title %></h1>
+	<p>Welcome to <%= title %></p>
+
+<% include footer.html %>
+
+
+
+<!--  <!DOCTYPE html>
+ <html lang="en">
+ <head>
+ 	<meta charset="UTF-8">
+ 	<title>11111111111111</title>
+ </head>
+ <body>
+ 		<p>222222222222</p>
+ </body>
+ </html> -->
