--- a/views/projects/front-end-navigation/index.html
+++ b/views/projects/front-end-navigation/index.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Project Index</title>
+	<title>front end navigation</title>
 </head>
+
 <body>
-		<p>222222222222</p>
+	
 </body>
 </html>
