--- a/public/stylesheets/projects/common.css
+++ b/public/stylesheets/projects/common.css
@@ -1,4 +1,14 @@
-/* add by wlj @20150810 - common css class*/
+/**
+ * add by wlj @20150810 - common css class
+ */
+
+a {
+	text-decoration: none;
+}
+ul {
+	margin: 5px;
+}
+
 ul.list-unstyled {
 	list-style: none;
 	padding: 0;
@@ -8,4 +18,14 @@ ul.list-unstyled {
 }
 .f-r {
 	float: right;
+}
+.clear {
+	clear: both;
+}
+.inline {
+	display: inline-block;
+}
+.main {
+	width: 1200px;
+	margin: 0 auto;
 }
