--- a/views/projects/front-end-navigation/layout.jade
+++ b/views/projects/front-end-navigation/layout.jade
@@ -2,8 +2,10 @@ doctype html
 html
 	head
 		block title
+		title #{title}
 		block style
-			link(rel='stylesheet' href='')
+			link(rel='stylesheet' href='stylesheets/projects/common.css')
+			link(rel='stylesheet' href='stylesheets/projects/front-end-navigation/index.css')
 	body
 		block content
 		block script
