--- a/views/projects/front-end-navigation/layout.jade
+++ b/views/projects/front-end-navigation/layout.jade
@@ -4,6 +4,7 @@ html
 		block title
 		title #{title}
 		block style
+			link(rel='stylesheet' href='stylesheets/Font-Awesome/css/font-awesome.css')
 			link(rel='stylesheet' href='stylesheets/projects/common.css')
 			link(rel='stylesheet' href='stylesheets/projects/front-end-navigation/index.css')
 	body
