--- a/public/stylesheets/projects/front-end-navigation/index.css
+++ b/public/stylesheets/projects/front-end-navigation/index.css
@@ -23,8 +23,9 @@
   text-align: center;
   vertical-align: middle;
   padding: 10px;
-  margin: 10px;
+  margin: 10px 35px;
   width: 300px;
+  height: 70px;
   background-color: #F4F0F0;
   box-shadow: 5px 5px 2px #DBD8D8;
 }
@@ -34,7 +35,7 @@
 }
 
 .block-item .block-item-name {
-	font-size: 24px;
+	font-size: 30px;
 	font-weight: bold;
 	padding: 5px;
 	color: #000;
@@ -47,4 +48,7 @@
 	padding: 3px 6px;
 	border-radius: 2px;
 	margin: 0 2px;
+}
+i.expand-icon {
+	cursor: pointer;
 }
